# biometric-verification-prototype

./: .gitignore  CMakeLists.txt  DESIGN_NOTE.md  Dockerfile  README.md
src/: ThresholdBiometricSystem.cpp  ThresholdBiometricSystem.h  main.cpp
